# Maths_Operations_Package

./: README.md
mathematical_operations/: setup.cfg  setup.py
mathematical_operations/env/: pyvenv.cfg
mathematical_operations/src/Mathematical_Operations.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mathematical_operations/tests/: .test.py.swp  test.py
