[metadata]
name = Mathematical_Operations
version = 1.0.0
author = Snigdha
author_email = YS.Snigdha@iiitb.ac.in
description = Basic operations 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Snigdha2005/math_operations
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = mathematical_operations
python_requires = >=3.6

[options.packages.find]
where = src
